refactor : Collections.emptyList() 사용